--- a/settings/project.json
+++ b/settings/project.json
@@ -7,6 +7,11 @@
     [
       true,
       false
+    ],
+    [
+      false,
+      false,
+      false
     ]
   ],
   "excluded-modules": [
@@ -16,7 +21,8 @@
   ],
   "group-list": [
     "zombie",
-    "bow"
+    "bow",
+    "default"
   ],
   "start-scene": "2d2f792f-a40c-49bb-a189-ed176a246e49",
   "design-resolution-width": 960,
