--- a/settings/project.json
+++ b/settings/project.json
@@ -21,7 +21,7 @@
   ],
   "group-list": [
     "zombie",
-    "bow",
+    "arrow",
     "default"
   ],
   "start-scene": "2d2f792f-a40c-49bb-a189-ed176a246e49",
