--- a/settings/project.json
+++ b/settings/project.json
@@ -36,7 +36,7 @@
     "height": 640,
     "width": 960
   },
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1590489651642,
   "assets-sort-type": "name",
   "facebook": {
     "appID": "",
